--- a/heart-disease-classification/prediction_heart_disease.ipynb
+++ b/heart-disease-classification/prediction_heart_disease.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 214,
    "id": "3f00122c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 215,
    "id": "8213beb2",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "9              N      0.0       Up             0  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f9db6bc",
+   "id": "c2c6a1fb",
    "metadata": {},
    "source": [
     "# Preparing the data.\n",
@@ -256,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "ae4d69ca",
+   "execution_count": 216,
+   "id": "24154dba",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "9    120               0      0.0         0             0  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "540c4ba9",
+   "id": "a5c2ed3c",
    "metadata": {},
    "source": [
     "2. We convert the dataframe to a numpy array **and** split the dataset into train and test segments "
@@ -500,8 +500,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "3b61bb87",
+   "execution_count": 217,
+   "id": "3c959044",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2741acc1",
+   "id": "2f14b6db",
    "metadata": {},
    "source": [
     "3. We scale our data, as most machine learning models do better when the input data is scaled or normalised."
@@ -523,19 +523,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "4d922889",
+   "execution_count": 218,
+   "id": "83c285e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "sc = StandardScaler()\n",
-    "X_train = sc.fit_transform(X_train)\n",
-    "X_test = sc.transform(X_test)"
+    "X_train_scaled = sc.fit_transform(X_train)\n",
+    "X_test_scaled = sc.transform(X_test)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "32d044c8",
+   "id": "24e4df4f",
    "metadata": {},
    "source": [
     "# Decision Tree Classifier"
@@ -543,15 +543,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "f8082524",
+   "execution_count": 221,
+   "id": "7c82e23e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "78%\n"
+      "Accuracy of model: 78%\n"
      ]
     }
    ],
@@ -559,15 +559,15 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "clf = DecisionTreeClassifier(random_state=1)\n",
-    "clf.fit(X_train, Y_train)\n",
+    "clf.fit(X_train_scaled, Y_train)\n",
     "\n",
-    "accuracy = round(((clf.score(X_test, Y_test)) * 100 ))\n",
-    "print(f'{accuracy}%')"
+    "accuracy = round(((clf.score(X_test_scaled, Y_test)) * 100 ))\n",
+    "print(f'Accuracy of model: {accuracy}%')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "53e19529",
+   "id": "9f7c0244",
    "metadata": {},
    "source": [
     "### Let's try something cheeky with the K-Fold cross_validation\n",
@@ -576,15 +576,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "bf7ccf8a",
+   "execution_count": 222,
+   "id": "b048c089",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79%\n"
+      "Accuracy of model: 79%\n"
      ]
     }
    ],
@@ -593,12 +593,12 @@
     "clf = DecisionTreeClassifier(random_state=1)\n",
     "cv_scores = cross_val_score(clf, X, Y, cv=26)\n",
     "accuracy = round((cv_scores.mean()) * 100)\n",
-    "print(f'{accuracy}%')"
+    "print(f'Accuracy of model: {accuracy}%')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fc480cab",
+   "id": "b3d69264",
    "metadata": {},
    "source": [
     "A little improvement. \n",
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78a821a4",
+   "id": "b0af16cd",
    "metadata": {},
    "source": [
     "### RandomForestClassifier"
@@ -615,15 +615,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "65597774",
+   "execution_count": 224,
+   "id": "9652f5dc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "90%\n"
+      "Accuracy of model: 90%\n"
      ]
     }
    ],
@@ -631,14 +631,14 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "clf = RandomForestClassifier(n_estimators=35, random_state=1)\n",
-    "clf.fit(X_train, Y_train)\n",
-    "accuracy = round((clf.score(X_test, Y_test) * 100))\n",
-    "print(f'{accuracy}%')"
+    "clf.fit(X_train_scaled, Y_train)\n",
+    "accuracy = round((clf.score(X_test_scaled, Y_test) * 100))\n",
+    "print(f'Accuracy of model: {accuracy}%')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d2e9914e",
+   "id": "42063492",
    "metadata": {},
    "source": [
     "***Wow***!!! what a jump. 11% improvement on accuracy.\n",
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcd861a4",
+   "id": "ad4b27e3",
    "metadata": {},
    "source": [
     "### SVM"
@@ -656,10 +656,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9111be8b",
+   "execution_count": 225,
+   "id": "2731fb31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of model: 91%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "svc = svm.SVC(kernel='rbf', C=1.0)\n",
+    "svc.fit(X_train_scaled, Y_train)\n",
+    "accuracy = round((svc.score(X_test_scaled, Y_test))*100)\n",
+    "print(f'Accuracy of model: {accuracy}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff4ef2cb",
+   "metadata": {},
+   "source": [
+    "The SVM model has upped accuracy by 1%, impressive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58ae93bf",
+   "metadata": {},
+   "source": [
+    "### KNN (K-Nearest Neighbours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "067e54e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of model: 91%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import neighbors\n",
+    "\n",
+    "clf = neighbors.KNeighborsClassifier(n_neighbors=10)\n",
+    "clf.fit(X_train_scaled, Y_train)\n",
+    "accuracy = round((svc.score(X_test_scaled, Y_test)) * 100)\n",
+    "print(f'Accuracy of model: {accuracy}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c71dfa1",
+   "metadata": {},
+   "source": [
+    "When working with **KNNs**, choosing the K value is a bit tricky, so it's best to create a loop that train the model over different values of K. <br>\n",
+    "Then we can go ahead to  select the K value with the highest accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "d46c55e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of model using K value of 1: 91%\n",
+      "Accuracy of model using K value of 2: 91%\n",
+      "Accuracy of model using K value of 3: 91%\n",
+      "Accuracy of model using K value of 4: 91%\n",
+      "Accuracy of model using K value of 5: 91%\n",
+      "Accuracy of model using K value of 6: 91%\n",
+      "Accuracy of model using K value of 7: 91%\n",
+      "Accuracy of model using K value of 8: 91%\n",
+      "Accuracy of model using K value of 9: 91%\n",
+      "Accuracy of model using K value of 10: 91%\n",
+      "Accuracy of model using K value of 11: 91%\n",
+      "Accuracy of model using K value of 12: 91%\n",
+      "Accuracy of model using K value of 13: 91%\n",
+      "Accuracy of model using K value of 14: 91%\n",
+      "Accuracy of model using K value of 15: 91%\n",
+      "Accuracy of model using K value of 16: 91%\n",
+      "Accuracy of model using K value of 17: 91%\n",
+      "Accuracy of model using K value of 18: 91%\n",
+      "Accuracy of model using K value of 19: 91%\n",
+      "Accuracy of model using K value of 20: 91%\n",
+      "Accuracy of model using K value of 21: 91%\n",
+      "Accuracy of model using K value of 22: 91%\n",
+      "Accuracy of model using K value of 23: 91%\n",
+      "Accuracy of model using K value of 24: 91%\n",
+      "Accuracy of model using K value of 25: 91%\n",
+      "Accuracy of model using K value of 26: 91%\n",
+      "Accuracy of model using K value of 27: 91%\n",
+      "Accuracy of model using K value of 28: 91%\n",
+      "Accuracy of model using K value of 29: 91%\n",
+      "Accuracy of model using K value of 30: 91%\n",
+      "Accuracy of model using K value of 31: 91%\n",
+      "Accuracy of model using K value of 32: 91%\n",
+      "Accuracy of model using K value of 33: 91%\n",
+      "Accuracy of model using K value of 34: 91%\n",
+      "Accuracy of model using K value of 35: 91%\n",
+      "Accuracy of model using K value of 36: 91%\n",
+      "Accuracy of model using K value of 37: 91%\n",
+      "Accuracy of model using K value of 38: 91%\n",
+      "Accuracy of model using K value of 39: 91%\n",
+      "Accuracy of model using K value of 40: 91%\n",
+      "Accuracy of model using K value of 41: 91%\n",
+      "Accuracy of model using K value of 42: 91%\n",
+      "Accuracy of model using K value of 43: 91%\n",
+      "Accuracy of model using K value of 44: 91%\n",
+      "Accuracy of model using K value of 45: 91%\n",
+      "Accuracy of model using K value of 46: 91%\n",
+      "Accuracy of model using K value of 47: 91%\n",
+      "Accuracy of model using K value of 48: 91%\n",
+      "Accuracy of model using K value of 49: 91%\n",
+      "Accuracy of model using K value of 50: 91%\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 51):\n",
+    "    clf = neighbors.KNeighborsClassifier(n_neighbors=i)\n",
+    "    clf.fit(X_train_scaled, Y_train)\n",
+    "    accuracy = round((svc.score(X_test_scaled, Y_test))*100)\n",
+    "    print(f'Accuracy of model using K value of {i}: {accuracy}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d1f1c0b",
+   "metadata": {},
+   "source": [
+    "Apparently, K values doesn't affect the model performance. But this is doesn't happen too often."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6cf838b",
+   "metadata": {},
+   "source": [
+    "### Naive Bayes\n",
+    "It's important to note that doesn't take negative feature values, as regarding our earlier scaled features. <br>\n",
+    "So we'll have to use the MinMaxScaler instead of the StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "5b549237",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the model: 89%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# scale the input features\n",
+    "scaler = MinMaxScaler()\n",
+    "X_train_minmax = scaler.fit_transform(X_train)\n",
+    "X_test_minmax = scaler.transform(X_test)\n",
+    "\n",
+    "# define the classifier\n",
+    "clf = MultinomialNB()\n",
+    "clf.fit(X_train_minmax, Y_train)\n",
+    "accuracy = round((clf.score(X_test_minmax, Y_test)) * 100)\n",
+    "print(f'Accuracy of the model: {accuracy}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "770b90ad",
+   "metadata": {},
+   "source": [
+    "Naive Bayes is 2 points back from the accuracy score to beat. <br>\n",
+    "But the NB model did alright."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3d5d25d",
+   "metadata": {},
+   "source": [
+    "### LogisticRegression\n",
+    "We've seen the performance of all these fancy models.<br>\n",
+    "But this is a basic binary classification so, let's try the LogisticRegression model which is a rather simpler approach to this type of classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "id": "39f97177",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the model: 88%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "clf = LogisticRegression()\n",
+    "clf.fit(X_train_scaled, Y_train)\n",
+    "accuracy = round((clf.score(X_test_scaled, Y_test))*100)\n",
+    "print(f'Accuracy of the model: {accuracy}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76c9dea9",
+   "metadata": {},
    "source": []
   }
  ],
