--- a/data-analysis/data_exploration_and_visualisation.ipynb
+++ b/data-analysis/data_exploration_and_visualisation.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "663e1c7a",
+   "id": "50f9eb1f",
    "metadata": {},
    "source": [
     "Apparently, it seems age doesn't affect total cholesterol in our dataset. <br>\n",
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "e82a4bc4",
+   "id": "4d28a170",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "714a5f8a",
+   "id": "d20a41dc",
    "metadata": {},
    "source": [
     "Interesting! We've learnt that a flat ST slope will likely indicate that the patient has a heart disease.\n",
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "1b53e2d0",
+   "id": "6e4079bc",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6f26fbf",
+   "id": "762f565b",
    "metadata": {},
    "source": [
     "There's more information perhaps insights if you may, that can be extracted from this pairplot visualisation. E.g, the old peak plot against old peak, shows that most people whose old peak is around 0, have a lesser tendency of heart disease. Hence, we can actually say that old peak is an important feature to predicting heart disease. Such insights can prove to be of utmost importance during the process of  **feature engineering** <br>\n",
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4996b0e8",
+   "id": "41d7b5f2",
    "metadata": {},
    "source": [
     "We'll plot a heatmap that will show the correlations between the 6 numerical attributes. As follows"
@@ -645,8 +645,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "0f1a0116",
+   "execution_count": 156,
+   "id": "0f634b60",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "Text(0.5, 1.0, 'Heat map of correlation between the 6 numerical attributes.')"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -679,11 +679,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e080c5c2",
+   "id": "48cf82e8",
    "metadata": {},
    "source": [
     "Earlier we saw from the pairplot that old peak is be a very important attribute or feature in predicting heart disease. This heat map proves it more with old peak having the highest correlation value _(0.4)_ to heart disease. However, it's clear that max heart rate is least correlated to heart disease, hence, we can forego such a feature in the feature engineering phase. <br>\n",
     "__Max heart rate is a redundant feature.__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01674991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ifunanyaScript"
    ]
   }
  ],
